# POSEC

./: ARCHITECTURE.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data_prep/: make_weekly.py  prepare_ba_lesiones.py  prepare_chicago.py  prepare_crime_data.py  prepare_poa_crime.py
docs/: RESULTS.md  method.md  method_guardia.md  walkthrough.md
posec/: config.py
posec/calib/: calibration.py  glm.py
posec/eval/: plotting.py  probabilistic.py  spatial_diag.py
posec/hybrid/: glm.py  guardia.py  predictive.py  transforms.py
posec/models/: base_model.py  tester.py  trainer.py
scripts/: reproduce.py  run_probabilistic.py  run_spatial_diag.py  train_gwavenet.py  train_stgcn.py  train_sthsl.py
tests/: test_golden.py  test_math.py
tests/fixtures/: golden_smoke_poa_stgcn_als.csv
