[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "posec"
version = "0.1.0"
description = "POSEC — Pareto-Optimal Spatial Error Calibration via Poisson Regression for crime forecasting"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["posec*"]
